--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vied12.github.io",
   "version": "0.1.0",
+  "homepage": "https://vied12.github.io",
   "private": true,
   "dependencies": {
     "autoprefixer": "7.1.2",
@@ -25,6 +26,7 @@
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
     "fs-extra": "3.0.1",
+    "gh-pages": "^1.0.0",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "material-ui": "^1.0.0-beta.12",
@@ -45,6 +47,8 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build -b master",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
