--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Edouard Richard",
+  "name": "Edouard Richard",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "cover.png",
       "sizes": "192x192",
       "type": "image/png"
     }
   ],
   "start_url": "./index.html",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#303030",
   "background_color": "#ffffff"
 }
