--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^16.0.0",
     "react-dev-utils": "^4.1.0",
     "react-dom": "^16.0.0",
+    "react-lazyload": "^2.3.0",
     "react-visibility-sensor": "^3.10.1",
     "sqip": "^0.2.1",
     "style-loader": "0.18.2",
