--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "placeholders": "node scripts/convert.js"
   },
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "^3.0.2",
-    "@material-ui/styles": "^3.0.0-alpha.10",
+    "@material-ui/core": "^4.0.1",
+    "@material-ui/icons": "^4.0.1",
+    "@material-ui/styles": "^4.0.1",
     "@zeit/next-css": "^1.0.1",
+    "classnames": "^2.2.6",
     "d3": "^5.9.2",
     "font-awesome": "^4.7.0",
     "next": "^8.0.4",
@@ -23,10 +25,21 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-jss": "^8.6.1",
-    "react-visibility-sensor": "^5.0.2"
+    "react-visibility-sensor": "^5.0.2",
+    "recompose": "^0.30.0"
   },
   "devDependencies": {
+    "async": "^3.0.1",
     "file-loader": "^3.0.1",
+    "husky": "^2.3.0",
+    "prettier": "1.17.1",
+    "pretty-quick": "^1.11.0",
+    "sqip": "^0.3.3",
     "url-loader": "^1.1.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
