--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "export": "rm -rf node_modules/.cache && npm run build && next export && touch out/.nojekyll",
+    "deploy": "npm run export && node scripts/publish.js",
     "placeholders": "node scripts/convert.js"
   },
   "dependencies": {
@@ -31,6 +33,7 @@
   "devDependencies": {
     "async": "^3.0.1",
     "file-loader": "^3.0.1",
+    "gh-pages": "^2.0.1",
     "husky": "^2.3.0",
     "prettier": "1.17.1",
     "pretty-quick": "^1.11.0",
