--- a/package.json
+++ b/package.json
@@ -32,6 +32,11 @@
   },
   "devDependencies": {
     "async": "^3.0.1",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "file-loader": "^3.0.1",
     "gh-pages": "^2.0.1",
     "husky": "^2.3.0",
